Fixed spacing between pixels so now generates an even grid

--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
 	background-color: #666;
 	display: block;
 	margin: 10px auto;
+	font-size: 0;
 }
 
 /* Pixels */
@@ -18,4 +19,5 @@
 .pixel {
 	margin: 1px;
 	display: inline-block;
+	background-color: cadetblue;
 }
